🔨 Case handling and testing

--- a/example.html
+++ b/example.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
+<head></head>
 <body>
   <main>
-    {!<div>{_test_}</div>!}
-    {!<div>{_test:raw_}</div>!}
+    {%reference%}-ID
+    {! {_tag_} <span>Tag</span>!}
+    {!<div>
+        {!<i title="{_title:raw_}"></i>!}
+      </div>!}
   </main>
-  <script>
-    const a = "{_test_}";
-    const b = {_test:raw_};
-    //{!
-      const c = "{_test:raw_}";
-    //!}
-  </script>
 </body>
 </html>
