🔨 Case handling and testing

--- a/example.html
+++ b/example.html
@@ -8,6 +8,11 @@
     {!<div>
         {!<i title="{_title:raw_}"></i>!}
       </div>!}
+      <div
+      class="{!{_first_}mt-1!}"
+      style="{!padding:1px;!}"
+      {!{_required_}required!}
+    ></div>
   </main>
 </body>
 </html>
